First Big Rewrite (components)

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Populate Calendar Dates",
+  "name": "IDEO Calendar Now",
   "id": "746043192205210994",
   "api": "1.0.0",
   "main": "dist/code.js",
