--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "IDEO Calendar Now",
+  "name": "Cal Now",
   "id": "746043192205210994",
-  "api": "1.0.0",
+  "api": "1.0.5",
   "main": "dist/code.js",
   "ui": "dist/ui.html"
 }
