--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
 node_modules/
 dist/
+typings/
+
+.npm
+.env
+
