--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "author": "Luuk Rombouts",
   "license": "ISC",
   "dependencies": {
-    "css-loader": "^3.1.0",
+    "css-loader": "^3.4.2",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "moment": "^2.24.0",
+    "serialize-javascript": ">=2.1.1",
     "style-loader": "^0.23.1",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.5.3",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6"
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "url-loader": "^2.3.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   }
 }
